--- a/LoanMinnow/client/src/styles/Dashboard.css
+++ b/LoanMinnow/client/src/styles/Dashboard.css
@@ -59,13 +59,60 @@ h3 {
   color: #1e3a8a;
 }
 
+
 .project-card {
-  background-color: rgba(255, 255, 255, .8);
+  background-color: rgba(255, 255, 255, 0.8);
   padding: 15px;
   margin-bottom: 10px;
   border-radius: 8px;
-  cursor: pointer;
-  transition: transform 0.2s;
+}
+
+.card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.fixed-label {
+  flex: 0 0 150px; /* Fixed width for the label */
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis; /* Handle long text properly */
+}
+
+.amount-info {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+
+.divider {
+  width: 1px;
+  height: 20px;
+  background-color: #ccc;
+  margin: 0 10px;
+}
+
+/* Adjusting the progress bar width */
+.progress-bar-container {
+  background-color: #e5e7eb;
+  border-radius: 8px;
+  overflow: hidden;
+  height: 32px;
+  margin-right: 10px;
+}
+
+h3 {
+  margin: 0;
+}
+
+.amount-info span {
+}
+
+.divider {
+  width: 1px;
+  height: 20px;
+  background-color: #ccc;
 }
 
 .project-card:hover {
