--- a/LoanMinnow/client/src/styles/VentureButton.css
+++ b/LoanMinnow/client/src/styles/VentureButton.css
@@ -3,12 +3,13 @@
     background-color: #1e3a8a; /* Dark blue */
     color: white;
     border: none;
-    padding: 20px 20px;
+    padding: 16px 16px;
     border-radius: 8px;
-    font-size: 16px;
+    font-size: 18px;
     cursor: pointer;
     transition: background-color 0.2s ease-in-out;
     z-index:2000;
+    width:"200%"
   }
   
   .start-venture-btn:hover {
